# trip-protocol

./: .gitignore  CONTRIBUTING.md  IMPLEMENTING.md  LICENSE  LICENSE.md  Makefile  README.md  draft-ayerbe-rats-trip-protocol.md  draft-ayerbe-trip-protocol.md
.github/workflows/: build.yml
_data/: navigation.yml
_pages/: about.md  posts.md
_posts/: 2024-11-27-algorithmic-aesthetics.md
_publications/: 2026-02-06-ipr-disclosure.md
academic-site/: _config.yml
academic-site/_pages/: cv.md
academic-site/_posts/: 2024-11-27-rethinking-knowledge.md  2026-02-08-trajectory-identity.md
academic-site/_publications/: 2026-02-08-trip-protocol.md
companion/: trip-npa-network-path-attestation.md
drafts/: draft-ayerbe-trip-protocol-01.html  draft-ayerbe-trip-protocol-01.txt  draft-ayerbe-trip-protocol-01.xml  draft-ayerbe-trip-protocol-02.html  draft-ayerbe-trip-protocol-02.txt  draft-ayerbe-trip-protocol-03.xml  draft-ayerbe-trip-protocol-04.html  draft-ayerbe-trip-protocol-04.txt  draft-ayerbe-trip-protocol-04.xml
ietf/: draft-ayerbe-trip-protocol-02.xml
reference/: Cargo.toml  README.md
reference/src/: crypto.rs  error.rs  handle.rs  handshake.rs  hit.rs  identity.rs  lib.rs  messages.rs  session.rs  trajectory.rs  trust.rs
spec/: MESSAGES.md  TRIP-SPEC.md  TRUST-DYNAMICS.md  TRUST.md
test-vectors/: identity.json
verifier/: Cargo.toml  README.md
verifier/src/: breadcrumb.rs  certificate.rs  chain.rs  criticality.rs  error.rs  hamiltonian.rs  levy.rs  lib.rs  psd.rs  verification.rs
