[package]
name = "trip-verifier"
version = "0.1.0"
edition = "2021"
description = "TRIP Protocol Criticality Engine — Verifier implementation"
license = "BSL-1.1"
authors = ["Camilo Ayerbe Posada <cayerbe@gmail.com>"]
repository = "https://github.com/GNS-Foundation/trip-protocol"

[dependencies]
# FFT for Power Spectral Density
rustfft = "6.2"

# Linear algebra for Lévy flight fitting
nalgebra = "0.33"

# Ed25519 signature verification
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# SHA-256 for chain verification
sha2 = "0.10"

# CBOR for PoH Certificate encoding
ciborium = "0.2"

# Hex encoding/decoding
hex = "0.4"

# H3 geospatial indexing
h3o = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random for nonce generation
rand = "0.8"

# HTTP server (for standalone mode)
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }

# Logging
tracing = "0.1"

# Error handling
thiserror = "2.0"

[features]
default = []
server = ["axum", "tokio", "tower"]

[[bin]]
name = "analyze"
path = "src/bin/analyze.rs"

[dev-dependencies]
rand = "0.8"
approx = "0.5"
